# sturdy-spoon

./: .gitignore  Cargo.toml  README.md
internal-server-error/: Cargo.toml
internal-server-error/src/: lib.rs
public/dynamic/: room-min.html
public/js/: room.js  str_packet.js  utils.js
public/statics/: index.html  room.html
src/: basic_auth.rs  lib.rs  main.rs  server_state.rs
src/common/: mod.rs  nanoid.rs  ubucket.rs  utils.rs
src/sturdy_ws/: compat.rs  mod.rs  ws.rs  ws_message.rs  ws_stream.rs
src/sturdy_ws/sturdy_tungstenite/: README.md  error.rs  mod.rs  util.rs
src/sturdy_ws/sturdy_tungstenite/protocol/: message.rs  mod.rs
src/sturdy_ws/sturdy_tungstenite/protocol/frame/: coding.rs  frame.rs  mask.rs  mod.rs
src/web/: mod.rs  room.rs
src/ws_handler/: mod.rs  room_state.rs  user_state.rs  ws_state.rs
statics/: script.js
web_pages/dynamic/: room-min.html
web_pages/js/: index.js  room.js  str_packet.js  utils.js
web_pages/statics/: index.html  room.html
