[package]
name = "sturdy-spoon"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = "thin"

[dependencies]
axum = { version = "0.6.18", features = ["tokio", "json", "headers", "macros", "http1"], default-features = false }
base64 = { default-features = false, version = "0.21.2" }
byteorder = { default-features = false, version = "1.4.3" }
futures = { default-features = false, version = "0.3.28" }
futures-util = { version = "0.3.28", default-features = false, features = ["bilock", "unstable"] }
http = "0.2.9"
hyper = "0.14.26"
log = "0.4.18"
rand = { default-features = false, version = "0.8.5" }
serde = { version = "1.0.163", default-features = false }
serde_json = { default-features = false, version = "1.0.96" }
sha1 = { default-features = false, version = "0.10.5" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"], default-features = false }
tokio-tungstenite = { default-features = false, version = "0.18.0" }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.4.0", features = ["fs"], default-features = false }
utf-8 = "0.7.6"
#uuid = { version = "1.3.3", features = ["serde", "v4"], default-features = false }
thiserror = "1.0.40"
scc = "1.8.3"
jsonwebtoken = { default-features = false, version = "8.3.0" }
internal_server_error = { path = "internal-server-error" }
ahash = "0.8.3"
nanoid = "0.4.0"
tower-cookies = "0.9.0"
